<resources>
    <string name="app_name">MinhaAgenda</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="pessoal">Pessoal</string>
    <string name="trabalho">Trabalho</string>
    <string name="refer_ncia">Referência</string>
    <string name="salvar">SALVAR</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="ok">OK</string>
    <string name="exibir_todos">EXIBIR TODOS</string>
    <string name="hint_referencia">Referência</string>
    <string name="e_mail">E-mail</string>
    <string name="fab_content_desc">fab_content_desc</string>
    <string name="excluir">EXCLUIR</string>
</resources>