<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo"
        android:scrollbarStyle="insideOverlay"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/campoNome"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdReferencia"
            style="@style/EditTextTelaPrincipal" />

        <EditText
            android:id="@+id/campoCelular"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16dp"
            android:hint="@string/celular"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campoNome"
            style="@style/EditTextTelaPrincipal" />


        <RadioGroup
            android:id="@+id/rdReferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </RadioGroup>

        <RadioButton
            android:id="@+id/rdPessoal"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_referencia"
            android:text="@string/pessoal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campoCelular"
            style="@style/RadioGroupTelaPrincipal" />

        <RadioButton
            android:id="@+id/rdTrabalho"
            android:hint="@string/e_mail"
            android:text="@string/trabalho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdPessoal"
            style="@style/RadioGroupTelaPrincipal" />


        <EditText
            android:id="@+id/campoReferencia"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/refer_ncia"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdTrabalho"
            style="@style/EditTextTelaPrincipal" />

        <Button
            android:id="@+id/btnSalvar"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campoReferencia"
            style="@style/BotoesTelaPrincipal"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="4sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/translucent_grey"
            app:layout_constraintTop_toBottomOf="@+id/btnSalvar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="387dp" />


        <EditText
            android:id="@+id/campoPesquisar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="no"
            android:hint="@string/pesquisar"
            app:layout_constraintEnd_toStartOf="@+id/btnPesquisar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            style="@style/EditTextTelaPrincipal" />

        <ImageButton
            android:id="@+id/btnPesquisar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/translucent_grey"
            android:src="@drawable/lupa1"
            app:layout_constraintBottom_toBottomOf="@+id/campoPesquisar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/campoPesquisar"
            app:layout_constraintTop_toTopOf="@+id/campoPesquisar" />

<!--        style="?attr/materialButtonOutlinedStyle"    -->

        <Button
            android:id="@+id/btnExibirTodos"
            android:text="@string/exibir_todos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campoPesquisar"
            style="@style/BotoesTelaPrincipal"/>

        <TextView
            android:id="@+id/listaContatos"
            android:background="@color/translucent_grey"
            android:backgroundTint="@color/translucent_grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExibirTodos"
            style="@style/TextViewTelaPrincipal" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>